[package]
name = "xnode_comm"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.12"
env_logger = "0.11.3"
clap = "4.5.4"
ctrlc = "3.4.4"
anyhow = "1.0.86"
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"

[build-dependencies]
prost-build = { version = "0.12.4" }

[profile.colcon]
inherits = "release"